[gd_scene load_steps=28 format=3 uid="uid://ci672kxyj722o"]

[ext_resource type="Script" path="res://scripts/score_challange_03.gd" id="1_826wp"]
[ext_resource type="Texture2D" uid="uid://ctxd0v28pjbav" path="res://assets/images/background.png" id="1_iimhu"]
[ext_resource type="Texture2D" uid="uid://cru2pdcaaqfo" path="res://assets/images/level_completed_styled.png" id="3_d51r6"]
[ext_resource type="Texture2D" uid="uid://0cy0n14lbwkx" path="res://assets/icons/star-completed.png" id="4_c2437"]
[ext_resource type="Texture2D" uid="uid://2nnefqov5e65" path="res://assets/icons/lamp-icon-normal.png" id="5_xg8ni"]
[ext_resource type="Texture2D" uid="uid://ceicths4y6iit" path="res://assets/icons/lamp-icon-pressed.png" id="6_xkmjv"]
[ext_resource type="Texture2D" uid="uid://f4rcx2bxcsqi" path="res://assets/icons/lamp-icon-disabled.png" id="6_yjyv1"]
[ext_resource type="Texture2D" uid="uid://dnfv574yjbm37" path="res://assets/icons/lamp-icon-hover.png" id="7_ytxoa"]
[ext_resource type="Texture2D" uid="uid://drv27xinyx4be" path="res://assets/icons/ai-icon-normal.png" id="8_fgl6l"]
[ext_resource type="Texture2D" uid="uid://c1dlga4svckqu" path="res://assets/icons/ai-icon-pressed.png" id="9_wxd6r"]
[ext_resource type="Texture2D" uid="uid://ofpwa0chmc8m" path="res://assets/icons/ai-icon-disabled.png" id="10_7aqc0"]
[ext_resource type="Texture2D" uid="uid://cfcbh5hsmm1te" path="res://assets/icons/ai-icon-hover.png" id="10_e833r"]
[ext_resource type="Texture2D" uid="uid://83sk4kx2mi6e" path="res://assets/icons/cards-icon-normal.png" id="11_lx74y"]
[ext_resource type="Texture2D" uid="uid://bym31wy6iw6vp" path="res://assets/icons/cards-icon-pressed.png" id="12_gq60a"]
[ext_resource type="Texture2D" uid="uid://bhoni6tvcbw3d" path="res://assets/icons/cards-icon-hover.png" id="13_dvn0b"]
[ext_resource type="Texture2D" uid="uid://dykbhjeor6fha" path="res://assets/icons/cards-icon-disabled.png" id="14_y2vi1"]
[ext_resource type="AudioStream" uid="uid://q42wr5varr5b" path="res://sounds/hover_button.mp3" id="17_r8wej"]
[ext_resource type="AudioStream" uid="uid://ce4jt2vnytw2e" path="res://sounds/button_click.wav" id="18_5sd0c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h63ok"]
bg_color = Color(0.678431, 0.752941, 0.694118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xju4c"]
bg_color = Color(0.180392, 0.34902, 0.270588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g65t5"]
bg_color = Color(0.964706, 0.937255, 0.913725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.180392, 0.34902, 0.270588, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h13ea"]
bg_color = Color(0.878431, 0.772549, 0.745098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xnewo"]
bg_color = Color(0.482353, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4q2f"]
bg_color = Color(0.964706, 0.937255, 0.913725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.482353, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ow8i0"]
bg_color = Color(0.823529, 0.886275, 0.882353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l87mj"]
bg_color = Color(0.0627451, 0.160784, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8a01f"]
bg_color = Color(0.964706, 0.937255, 0.913725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.00784314, 0.0235294, 0.0509804, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Challange" type="Node2D"]
z_index = 5
position = Vector2(460, 414)
script = ExtResource("1_826wp")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -414.0
offset_right = 460.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_iimhu")

[node name="Title" type="HBoxContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -458.0
offset_top = -333.0
offset_right = 462.0
offset_bottom = -264.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="title" type="Label" parent="Title"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 50
text = "Desafio 03
"

[node name="Save" type="Button" parent="."]
offset_left = 101.0
offset_top = 253.0
offset_right = 273.0
offset_bottom = 317.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 30
text = "Enviar"

[node name="Back" type="Button" parent="."]
offset_left = -264.0
offset_top = 253.0
offset_right = -92.0
offset_bottom = 317.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 30
text = "Voltar"

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = -460.0
offset_top = -205.0
offset_right = 460.0
offset_bottom = 240.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 25
text = "3. Qual das alternativas abaixo é uma forma correta de
declarar uma função em JavaScript?"

[node name="Option_01" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
text = "A - function somar(a, b) { return a + b; }"
alignment = 0

[node name="Option_02" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
text = "B - function: somar(a, b) => { return a + b; }"
alignment = 0

[node name="Option_03" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
text = "C - let somar = function(a, b) => { return a + b; }"
alignment = 0

[node name="Option_04" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
text = "D - ) somar(a, b) = { return a + b; }"
alignment = 0

[node name="Help" type="TextureButton" parent="."]
offset_left = 368.0
offset_top = -356.0
offset_right = 410.0
offset_bottom = -314.0
tooltip_text = "Obter dica"
texture_normal = ExtResource("5_xg8ni")
texture_pressed = ExtResource("6_xkmjv")
texture_hover = ExtResource("7_ytxoa")
texture_disabled = ExtResource("6_yjyv1")

[node name="QuantityHelp" type="Label" parent="."]
offset_left = 280.0
offset_top = -352.0
offset_right = 360.0
offset_bottom = -317.0
theme_override_colors/font_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 2

[node name="AI" type="TextureButton" parent="."]
offset_left = 373.0
offset_top = -288.0
offset_right = 405.0
offset_bottom = -246.0
tooltip_text = "Obter resposta da IA"
texture_normal = ExtResource("8_fgl6l")
texture_pressed = ExtResource("9_wxd6r")
texture_hover = ExtResource("10_e833r")
texture_disabled = ExtResource("10_7aqc0")

[node name="QuantityAI" type="Label" parent="."]
offset_left = 280.0
offset_top = -285.0
offset_right = 360.0
offset_bottom = -250.0
theme_override_colors/font_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 2

[node name="Cards" type="TextureButton" parent="."]
offset_left = 369.0
offset_top = -220.0
offset_right = 409.0
offset_bottom = -180.0
tooltip_text = "Eliminar alternativas"
texture_normal = ExtResource("11_lx74y")
texture_pressed = ExtResource("12_gq60a")
texture_hover = ExtResource("13_dvn0b")
texture_disabled = ExtResource("14_y2vi1")

[node name="QuantityCards" type="Label" parent="."]
offset_left = 280.0
offset_top = -215.0
offset_right = 360.0
offset_bottom = -180.0
theme_override_colors/font_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 2

[node name="ConcludedChallange" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -414.0
offset_right = 460.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 0.784314)

[node name="Modal" type="ColorRect" parent="ConcludedChallange"]
layout_mode = 0
offset_left = 145.0
offset_top = 216.0
offset_right = 775.0
offset_bottom = 521.0
color = Color(0.964706, 0.937255, 0.913725, 1)

[node name="Star1" type="TextureRect" parent="ConcludedChallange"]
layout_mode = 0
offset_left = 145.0
offset_top = 216.0
offset_right = 775.0
offset_bottom = 277.0
texture = ExtResource("3_d51r6")

[node name="Star3" type="TextureRect" parent="ConcludedChallange"]
layout_mode = 0
offset_left = 420.0
offset_top = 160.0
offset_right = 500.0
offset_bottom = 240.0
texture = ExtResource("4_c2437")

[node name="Label" type="Label" parent="ConcludedChallange"]
layout_mode = 0
offset_left = 145.0
offset_top = 323.0
offset_right = 775.0
offset_bottom = 372.0
theme_override_colors/font_color = Color(0.180392, 0.34902, 0.270588, 1)
theme_override_font_sizes/font_size = 35
text = "Desafio concluído"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Confirm" type="Button" parent="ConcludedChallange"]
layout_mode = 0
offset_left = 390.0
offset_top = 416.0
offset_right = 530.0
offset_bottom = 466.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.180392, 0.34902, 0.270588, 1)
theme_override_colors/font_pressed_color = Color(0.678431, 0.752941, 0.694118, 1)
theme_override_colors/font_focus_color = Color(0.180392, 0.34902, 0.270588, 1)
theme_override_colors/font_color = Color(0.180392, 0.34902, 0.270588, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_h63ok")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xju4c")
theme_override_styles/normal = SubResource("StyleBoxFlat_g65t5")
text = "OK"

[node name="IncorrectAnswer" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -414.0
offset_right = 460.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 0.784314)

[node name="Modal" type="ColorRect" parent="IncorrectAnswer"]
layout_mode = 0
offset_left = 146.0
offset_top = 237.0
offset_right = 776.0
offset_bottom = 542.0
color = Color(0.964706, 0.937255, 0.913725, 1)

[node name="Label" type="Label" parent="IncorrectAnswer"]
layout_mode = 0
offset_left = 145.0
offset_top = 323.0
offset_right = 775.0
offset_bottom = 372.0
theme_override_colors/font_color = Color(0.482353, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "resposta incorreta"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TryAgain" type="Button" parent="IncorrectAnswer"]
layout_mode = 0
offset_left = 360.0
offset_top = 415.0
offset_right = 560.0
offset_bottom = 465.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.482353, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_colors/font_focus_color = Color(0.482353, 0, 0, 1)
theme_override_colors/font_color = Color(0.482353, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_h13ea")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xnewo")
theme_override_styles/normal = SubResource("StyleBoxFlat_v4q2f")
text = "Tentar novamente"

[node name="AIResponse" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -414.0
offset_right = 460.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 0.784314)

[node name="Modal" type="ColorRect" parent="AIResponse"]
layout_mode = 0
offset_left = 146.0
offset_top = 237.0
offset_right = 776.0
offset_bottom = 587.0
color = Color(0.964706, 0.937255, 0.913725, 1)

[node name="OK" type="Button" parent="AIResponse"]
layout_mode = 0
offset_left = 360.0
offset_top = 497.0
offset_right = 560.0
offset_bottom = 547.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.00784314, 0.0235294, 0.0509804, 1)
theme_override_colors/font_pressed_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_colors/font_focus_color = Color(0.00784314, 0.0235294, 0.0509804, 1)
theme_override_colors/font_color = Color(0.00784314, 0.0235294, 0.0509804, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_ow8i0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l87mj")
theme_override_styles/normal = SubResource("StyleBoxFlat_8a01f")
text = "OK"

[node name="Introdution" type="ScrollContainer" parent="AIResponse"]
layout_mode = 0
offset_left = 178.0
offset_top = 277.0
offset_right = 738.0
offset_bottom = 477.0

[node name="VBoxContainer" type="VBoxContainer" parent="AIResponse/Introdution"]
custom_minimum_size = Vector2(560, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="AIReturn" type="Label" parent="AIResponse/Introdution/VBoxContainer"]
custom_minimum_size = Vector2(560, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.00784314, 0.0235294, 0.0509804, 1)
theme_override_font_sizes/font_size = 25
text = "Carregando..."
horizontal_alignment = 1
autowrap_mode = 3

[node name="HoverButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_r8wej")
volume_db = -15.0

[node name="ClickButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_5sd0c")
volume_db = -5.0

[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Option_01" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Option_02" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Option_03" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Option_04" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="AI" to="." method="_on_ai_pressed"]
[connection signal="pressed" from="Cards" to="." method="_on_cards_pressed"]
[connection signal="pressed" from="ConcludedChallange/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="IncorrectAnswer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="AIResponse/OK" to="." method="_on_ok_pressed"]
